--- a/css/style.css
+++ b/css/style.css
@@ -86,3 +86,24 @@ footer {
 	background-color: #222;
 	height: 100px;
 }
+
+.slide-menu nav {
+	width: 400px;
+	margin: 50px auto;
+}
+
+.slide-menu nav a {
+	padding: 0.75em 0;
+	font-size: 1.2em;
+	font-weight: 400;
+	text-decoration: none;
+	cursor: pointer;
+	text-transform: uppercase;
+	color: white;
+	display: block;
+	border-bottom: 0.5px solid rgba(255,255,255,0.4);
+}
+
+.slide-menu nav a:last-child {
+	border-bottom: 0px;
+}
